# SpaceEngine-localization

./: .gitignore  README.md  Win32Project1.sln  eng-menu.psd  win1252-font.psd
ConsoleApplication/: Config.ini  ConsoleApplication.cpp  ConsoleApplication.vcxproj  ConsoleApplication.vcxproj.filters  ConsoleApplication3.cpp  ConsoleApplication3.rc  ConsoleApplication3.vcxproj.filters  Resource.rc  cmdline.h  gui.txt  localization.json  resource.h  resource1.h  shader.glsl  stdafx.cpp  stdafx.h
FontTex/: FontTex.cpp  FontTex.vcxproj  FontTex.vcxproj.filters  Map.txt  ReadMe.txt  stdafx.cpp  stdafx.h
Hook/: AsmTest.cpp  AsmTest.s  CMakeCache.txt  CMakeLists.txt  Hook.asm  Hook.cpp  Hook.h  HookV2.asm  HookV3.asm  Makefile  ReadMe.txt  SpaceEngine.CT  Test.cpp  asm.py  ce.bat  chs-fonts.cfg  chs-gui.cfg  chs-gui2.cfg  cmake_install.cmake  com-2.txt  com.txt  dllmain.cpp  hk.asm  language.json  localization.json  m.txt  mk.py  mk2.py  nop.asm  win1252-font-981b9.psd  win1252-font-big.psd
LibJson/: LibJson.cpp  LibJson.vcxproj  LibJson.vcxproj.filters  json_reader.cpp  json_writer.cpp
LibPNG/: LibPNG.2013.vcxproj
LibPNG2/: LibPNG.vcxproj  LibPNG.vcxproj.filters  ReadMe.txt  png.h  stdafx.cpp
Release/: Config.ini
Release WinXP/: Win32Project1.exp  Win32Project1.lib
Spy++/: ReadMe.txt  Spy++.cpp  Spy++.h  Spy++.rc  Spy++.vcxproj  Spy++.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
Test/: RCa07868  Test.cpp  Test.rc  Test.vcxproj  Test.vcxproj.filters  dllmain.cpp  resource.h  stdafx.cpp  stdafx.h
Win32Project1/: CN-font - 副本.cfg  Config.ini  Config2.ini  (+28 more)
(+107 files in other folders)
